fdo#87596 Draw tab fill color when selected on the tab bottom

Change-Id: I02bcdf88063d272cb9eb9e89cbee61d30f4f01d6